# devops

./: .gitignore  .gitlab-ci.yml  Jenkinsfile  README.md  docker-compose.jenkins.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.prod.sh  pyproject.toml
backend/backend/: asgi.py  consumers.py  middleware.py  settings.py  signals.py  urls.py
backend/core/: consumers.py  models.py  permissions.py  routing.py  serializers.py  signals.py  task.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_department_updated_at.py  0004_alter_department_description_and_more.py
backend/inventory/: consumers.py  models.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/labor/: apps.py  consumers.py  models.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/main/: adapters.py  apps.py  consumers.py  models.py  permissions.py  provider.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/product/: consumers.py  models.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/production/: consumers.py  models.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/project/: consumers.py  models.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/scripts/: SQLite.sql  info.py  script1.py  script10.py  script11.py  script2.py  script3.py  script4.py  script5.py  script6.py  script7.py  script8.py  script9.py
frontend/: index.html  (+3 more)
(+84 files in other folders)
